# slackeros

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
launch/: slackeros.launch
scripts/: slackeros_node.py
slackeros/: CMakeLists.txt  package.xml
slackeros/scripts/: slackeros.py  slackeros_node.py  standard_services.py
slackeros/src/: base_connector.py
slackeros/src/slackeros/: base_connector.py  ros_connector.py
src/slackeros/: base_connector.py  ros_connector.py
srv/: SlashCommand.srv
