<?xml version="1.0"?>
<package format="2">
  <name>slackeros</name>
  <version>0.0.0</version>
  <description>The slackeros package</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-requests</exec_depend>
  <exec_depend>python-webpy</exec_depend>

</package>
